--- a/word/style.css
+++ b/word/style.css
@@ -195,12 +195,17 @@
     }
     
     .apropos h1 {
-        font-size: 60px;
+        font-size: 45px;
         color: #302c2c;
+    }
+
+    .apropos h2 {
+        font-size: 65px;
+        color: grey;
     }
     
     .apropos p {
-        margin-top: 23%;
+        margin-top: 13%;
         margin-bottom: 4%;
         font-size: 23px;
         font-weight: 100;
