--- a/word/style.css
+++ b/word/style.css
@@ -293,6 +293,35 @@
     }
     
     /* Quatrième section - Blog*/ 
+
+    .date {
+        top: 10px;
+        left: 10px;
+        background: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        padding: 5px 10px;
+        border-radius: 5px;
+        font-size: 14px;
+        text-align: center;
+      }
+
+      .dates {
+        position:absolute;
+        background: rgb(59, 59, 59);
+        color: #fff;
+        padding: 30px 35px;
+        border-radius: 5px;
+        font-size: 14px;
+        text-align: center;
+        margin-left:1%;
+      }
+
+      span {
+        font-size: 18px;
+        display: block;
+      }
+
+
     .title {
         text-align: center;
         padding-top: 15%;
@@ -810,6 +839,23 @@
         }
         
         /* Quatrième section - Blog*/ 
+
+        .dates {
+            position:absolute;
+            background: rgb(59, 59, 59);
+            color: #fff;
+            padding: 30px 35px;
+            border-radius: 5px;
+            font-size: 14px;
+            text-align: center;
+            margin-left:1.3%;
+          }
+
+          span {
+            font-size: 18px;
+            display: block;
+          }
+
         .title {
             text-align: center;
             padding-top: 15%;
