--- a/word/style4.css
+++ b/word/style4.css
@@ -186,28 +186,31 @@ input[type="file"]:focus {
     }
 }
 
-/* Style du lien "Retour au menu" */
+/* Style pour le bouton rose centré */
 .btn-return {
     display: inline-block;
-    background-color: #4CAF50;
-    color: white;
+    margin: 20px auto;
     padding: 10px 20px;
-    margin-top: 20px;
-    text-decoration: none;
+    background-color: #ff69b4; /* Rose */
+    color: #fff;
     text-align: center;
+    text-decoration: none;
     font-size: 16px;
+    font-weight: bold;
+    border: none;
     border-radius: 5px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère */
 }
 
-/* Effet de survol du lien */
+/* Style pour le bouton au survol */
 .btn-return:hover {
-    background-color: #45a049;
-    transform: scale(1.05);
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-    animation: pulse 0.5s ease-out infinite;
+    background-color: #ff1493; /* Rose plus foncé */
+    transform: scale(1.05); /* Légère mise en avant */
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Ombre accentuée */
 }
+
 
 /* Animation du lien lors de l'apparition */
 @keyframes pulse {
@@ -221,4 +224,5 @@ input[type="file"]:focus {
         transform: scale(1);
     }
 }
+
 
