--- a/word/style.css
+++ b/word/style.css
@@ -1968,7 +1968,15 @@ label {
 
 
 
-    
+            .badge {
+                background-color: red;
+                color: white;
+                font-size: 12px;
+                padding: 5px;
+                border-radius: 50%;
+                margin-left: 5px;
+            }
+            
     
 
  
