--- a/word/assets/css/style.css
+++ b/word/assets/css/style.css
@@ -231,7 +231,7 @@ sectionapropos {
 
 
 .banniere{
-    background-image: url("assets/images/section-back.svg");
+    background-image: url("../images/section-back.svg");
     background-color: rgba(0, 0, 0, 0.801);
     color:white;
     height: 100px;
@@ -269,6 +269,23 @@ sectionapropos {
 }
 
 /* Quatrième section - Blog*/ 
+
+.dates {
+    position:absolute;
+    background: rgb(59, 59, 59);
+    color: #fff;
+    padding: 30px 35px;
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+    margin-left:1%;
+  }
+
+  span {
+    font-size: 18px;
+    display: block;
+  }
+
 .title {
     text-align: center;
     padding-top: 15%;
@@ -2036,6 +2053,12 @@ label {
 /* Chaque menu parent doit gérer son propre positionnement */
 .nav {
     position: relative; /* Positionnement relatif pour chaque lien */
+    text-decoration: none;
+}
+
+.nav  a {
+    color: black;
+    text-decoration: none;
 }
 
 /* Menu déroulant caché par défaut */
