--- a/Projet/word/assets/css/style.css
+++ b/Projet/word/assets/css/style.css
@@ -1,14 +1,14 @@
 /* Reset CSS */
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
 }
 
 navbar {
     display: flex;
-    padding: 3% 13% 0px;
+    padding: 3% 13% 0;
     justify-content: space-between;
     flex-wrap: wrap;
 }
@@ -57,14 +57,14 @@ navbar {
 }
 
 img.entete {
-    padding: 0px 10px 0px 0px;
+    padding: 0 10px 0 0;
     border-radius: 50%;
     width: 75px;
     height: 75px;
 }
 
 .nom {
-    padding: 5px 0px 0px;
+    padding: 5px 0 0;
     color: #302c2c;
 }
 
@@ -89,15 +89,15 @@ section1 #t3 {
     font-size: 28px;
     font-weight: 100;
     color: grey;
-    padding: 0px 0px 50px;
+    padding: 0 0 50px;
 }
 
 .link img {
-    padding: 0px 0.5% 0px;
+    padding: 0 0.5% 0;
 }
 
 .illustration img {
-    padding: 0px;
+    padding: 0;
     max-width: 100%;
     height: auto;
 }
@@ -307,38 +307,22 @@ section1 #t3 {
     padding-bottom: 2%;
 }
 
-
 .articles {
-    columns: 1;
-    text-align: center;
-        margin: 0% 8% 0%
-    text-align: center;
-    margin: 0% 8%;
-}
-
-@media screen and (min-width: 768px) {
-    .articles {
-        columns: 2;
-        text-align: center;
-        margin: 0% 8% 0%
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .articles {
-        columns: 3 auto;
-        text-align: center;
-        margin: 0% 8% 0%
-    }
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 20px;
+    margin: 0 8%;
 }
 
 .articles img {
-    width:481px;
-    height:334px;
+    width: 100%;
+    max-width: 480px;
+    height: auto;
     padding-bottom: 4%;
 }
+
 .article {
-    padding:0% 1% 0%; 
+    padding: 1%;
 }
 
 .article h1 {
@@ -349,49 +333,28 @@ section1 #t3 {
 }
 
 .article p {
-    color:grey;
-    font-size: 25px;
+    color: grey;
+    font-size: 18px;
     text-align: left;
 }
 
-.article .lire {
-
-    justify-content: left;
-}
-
 .lire {
-
-        color: grey;
-        padding: 15px 70px 15px 70px;
-        text-align: left;
-        text-decoration: none;
-        display: inline-block;
-        margin-top: 10%;
-        margin-right: 100%;
-        font-size: 16px;
-        border-radius: 3rem;
-        border: 2.5px solid grey;
-    
+    color: grey;
+    padding: 15px 70px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 10%;
+    font-size: 16px;
+    border-radius: 3rem;
+    border: 2.5px solid grey;
 }
 
 .lire:hover {
-
     background-color: rgb(44, 44, 44);
     border-color: rgb(44, 44, 44);
     font-weight: 100;
-    color:white;
-    padding: 15px 70px 15px 70px;
-    text-decoration:none;
-    display: inline-block;
-    font-size:16px;
-    border-radius:3rem;
-
-
-}
-
-.boutonlire {
-    justify-content: left;
-
+    color: white;
 }
 
 .footer-basic {
@@ -436,29 +399,30 @@ section1 #t3 {
 .popup-content h1 {
     font-size: 60px;
     color: #302c2c;
-
 }
+
 .dates {
-    position:absolute;
+    position: absolute;
     background: rgb(59, 59, 59);
     color: #fff;
     padding: 30px 35px;
     border-radius: 5px;
     font-size: 14px;
     text-align: center;
-    margin-left:1%;
-  }
+    margin-left: 1%;
+}
 
-  span {
+span {
     font-size: 18px;
     display: block;
-  }
+}
+
 form {
     padding-top: 6%;
 }
 
 input, textarea {
-    border: grey 1px solid;
+    border: 1px solid grey;
     border-radius: 2rem;
     width: 90%;
     height: 40px;
