--- a/word/assets/css/style.css
+++ b/word/assets/css/style.css
@@ -445,6 +445,22 @@ p.avis {
 
 }
 
+.dates {
+    position:absolute;
+    background: rgb(59, 59, 59);
+    color: #fff;
+    padding: 30px 35px;
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+    margin-left:1%;
+  }
+
+  span {
+    font-size: 18px;
+    display: block;
+  }
+
 
 /* Footer */
 
