--- a/word/assets/css/style.css
+++ b/word/assets/css/style.css
@@ -8,7 +8,7 @@
 
 navbar {
     display:flex;
-    padding: 3% 13% 0px;
+    padding: 3px 13px 0px;
     justify-content: space-between;
 }
 
@@ -445,29 +445,12 @@ p.avis {
 
 }
 
-.dates {
-    position:absolute;
-    background: rgb(59, 59, 59);
-    color: #fff;
-    padding: 30px 35px;
-    border-radius: 5px;
-    font-size: 14px;
-    text-align: center;
-    margin-left:1%;
-  }
-
-  span {
-    font-size: 18px;
-    display: block;
-  }
-
 
 /* Footer */
 
 .footer-basic {
     margin-top: 5%;
     padding:1.3% 0;
-    background-color:#ffffff;
     color:#4b4c4d;
     background-color: #302c2c;
   }
